Isiah and Abdirahman has compleeted CSS Task and updated on HTML File

--- a/about.html
+++ b/about.html
@@ -1,72 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DriveHub Motors | About Us</title>
-
+    <title>About Us | DriveHub Motors</title>
     <link rel="stylesheet" href="styles/about.css">
 </head>
+
 <body>
 
-    <!-- Navbar -->
-    <header>
-        <nav class="navbar">
-            <div class="logo-area">
-                <img src="https://shmector.com/_ph/13/853993434.png" alt="DriveHub Motors Logo">
-                <h1>DriveHub Motors</h1>
-            </div>
+    <!-- NAVIGATION -->
+    <nav class="navbar">
+        <div class="logo">
+            <img src="assets/images/DriveHub Motors Logo.png" alt="DriveHub Motors Logo">
+        </div>
+        <ul class="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a class="active" href="about.html">About Us</a></li>
+            <li><a href="cars.html">Cars</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
 
-        
-        </nav>
+    <!-- HERO SECTION -->
+    <header class="about-hero">
+        <div class="overlay"></div>
+        <h1>Who We Are</h1>
+        <p>Driven by passion. Powered by innovation.</p>
     </header>
 
-    <!-- Banner -->
-    <section class="hero-banner">
-        <img src="https://images.presentationgo.com/2025/04/black-sports-car-night-city.jpg" 
-             alt="About DriveHub Motors Banner">
-        <div class="banner-text">
-            <h2>About Us</h2>
+    <!-- ABOUT CONTENT -->
+    <section class="about-section">
+        <div class="container">
+            <h2>Welcome to DriveHub Motors</h2>
+            <p>
+                DriveHub Motors is a next-generation automotive marketplace built for performance, trust,
+                and innovation. We connect drivers to high-quality vehicles through a seamless and modern buying experience.
+            </p>
+
+            <h3>Our Mission</h3>
+            <p>
+                To deliver premium automotive solutions with transparency, precision, and a passion for engineering excellence.
+            </p>
+
+            <h3>Why Choose Us?</h3>
+            <ul>
+                <li>Premium selection of certified vehicles</li>
+                <li>High-quality automotive research and inspection</li>
+                <li>Professional buying experience</li>
+                <li>Complete customer support and guidance</li>
+            </ul>
+
+            <h3>Our Vision</h3>
+            <p>
+                To become the most trusted automotive brand globally — where innovation, luxury, and performance meet.
+            </p>
         </div>
     </section>
 
-    <!-- About Content -->
-    <section class="about-container">
-        <h2>Our Mission</h2>
-        <p>
-            At DriveHub Motors, our mission is to provide high-quality vehicles and outstanding customer service,
-            making car ownership simple and enjoyable for everyone.
-        </p>
-
-        <h2>Our History</h2>
-        <p>
-            DriveHub Motors started as a small family-owned dealership in Nairobi. Over the years, we have grown
-            into a trusted name in automotive sales, combining experience with innovation to meet the needs of modern drivers.
-        </p>
-
-        <h2>Our Values</h2>
-        <ul class="values-list">
-            <li>Integrity in every transaction</li>
-            <li>Customer satisfaction is our top priority</li>
-            <li>Innovation and continuous improvement</li>
-            <li>Transparency and trust</li>
-            <li>Community engagement and support</li>
-        </ul>
-    </section>
-
-    <!-- Notice -->
-    <p class="portfolio-note">
-        This website is a group coding portfolio project created for learning purposes only.
-        All details, contacts, and images are placeholders.
-    </p>
-
+    <!-- FOOTER -->
     <footer>
-        <p>© 2025 DriveHub Motors  — All Rights Reserved</p>
+        <p>© 2025 DriveHub Motors — All Rights Reserved.</p>
     </footer>
 
 </body>
-</html> All details, contacts, and images are placeholders.</p>
-
-    <footer>
-        <p>© 2025 DriveHub Motors — All Rights Reserved</p>
-    </footer>
+</html>
