--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,14 @@
       <div class="logo">
         <h2>DriveHub Motors</h2>
       </div>
+      <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="cars.html">Cars</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="cart.html">Cart</a></li>
+            <li><a href="checkout.html">Checkout</a></li>
+        </ul>
 
       
     </nav>
