i have inserted the global styles in everyone in css file so that file can remain the same and be consitence in terms if background color

--- a/checkout.html
+++ b/checkout.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkout</title>
-</head>
+    <link rel="stylesheet" href="styles/checkout.css">
+
+</head><!-- Link Your CSS Files -->
 <body>
     <header>
         <h1>Checkout</h1>
