--- a/car-details.html
+++ b/car-details.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DriveHub Motors | Mercedes‑Benz S‑Class 2022</title>
-  <link rel="stylesheet" href="styles/style.css">
+<link rel="stylesheet" href="styles/car-details.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
