--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
 </head>
 <body>
     <!-- Header -->
-    <header>
-        <div class="container">
+    <header">
+        <div class="container1">
             <div class="header-content">
                 <div class="logo">
                     <i class="fas fa-car"></i>
                     <div>
-                        <h1>DriveHub <span>Motors</span></h1>
-                        <p class="tagline">Luxury automotive excellence since 1995</p>
+                        <h1 class="container1h1" style="text-align:center;">DriveHub <span>Motors</span></h1>
+                        <p style="text-align:center;"class="tagline">Luxury automotive excellence since 1995</p>
                     </div>
                 </div>
                 <nav>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="cars.html">Cars</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                        <li><a href="cart.html">Cart</a></li>
+                    <ul class="homepage">               
+                        <a href="#">Home</li></a></li>
+                        <a href="#">cars</li></a></li>
+                        <a href="#">about</li></a></li>
+                        <a href="#">contact</li></a></li>
+                        <a href="#">cart</li></a></li>
                     </ul>
                 </nav>
             </div>
@@ -36,7 +36,7 @@
 
     <!-- Hero Section -->
     <section class="hero">
-        <div class="container">
+        <div id="container">
             <h2>Find Your Dream Car Today</h2>
             <p>Explore our premium collection of luxury vehicles, hand-picked for quality and performance.</p>
             <a href="cars.html" class="btn-cta">Browse Cars</a>
@@ -45,7 +45,7 @@
 
     <!-- Featured Cars Section -->
     <section class="featured-cars">
-        <div class="container">
+        <div id="container">
             <h2>Featured Vehicles</h2>
             <div class="car-cards">
                 <div class="car-card">
@@ -71,12 +71,14 @@
                     <h3>Lexus RX 500h 2022</h3>
                     <p>$70,000 • SUV • Hybrid</p>
                     <a href="car-details.html?id=4" class="btn-details">View Details</a> 
-             </div>
+                </div>
                  <div class="car-card">
                     <img src="https://i.pinimg.com/736x/1c/30/96/1c309666cafc8c1b8c5f4ebbf3b157c2.jpg">
                     <h3>Porsche 911 Carrera 2021</h3>
                     <p>$99,000 • Sports • Manual</p>
                     <a href="car-details.html?id=5" class="btn-details">View Details</a>
+                 </div>
+            </div>      
         </div>
     </section>
 
@@ -104,7 +106,11 @@
     </section>
 
     <!-- Footer -->
+
+
+
     <footer>
+    
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
@@ -118,7 +124,16 @@
                         <li><a href="cars.html">Best Deals</a></li>
                         <li><a href="contact.html">Sell Your Car</a></li>
                         <li><a href="checkout.html">Financing</a></li>
-                        <li><a href="cart.html">rentals</a></li>
+                        <li><a href="rentals.html">rentals</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 
+
+
+</body>
+</html>
 
 
