Abdulhadi and Gideon

--- a/car-details.html
+++ b/car-details.html
@@ -44,7 +44,7 @@
 
         <div class="thumbnails">
           <img src="https://images.hgmsites.net/med/2022-mercedes-benz-s-class-s-500-4matic-sedan-side-exterior-view_100829916_m.jpg" alt="Side view">
-          <img src="https://www.thecarconnection.com/overview/mercedes-benz_s-class_2022" alt="Rear view">
+          <img src="https://images.hgmsites.net/med/2022-mercedes-benz-s-class-s-500-4matic-sedan-rear-exterior-view_100829910_m.jpg" alt="Rear view">
           <img src="https://di-uploads-pod7.dealerinspire.com/mercedesbenzedmontonwestltd/uploads/2022/03/All-New-2022-Mercedes-Benz-S-Class-Sedan-Interior-1024x577.jpg" alt="Interior view">
         </div>
       </div>
