--- a/cart.html
+++ b/cart.html
@@ -132,6 +132,9 @@
             <div class="total">Total: <span id="total">Ksh660,000</span></div>
         </div>
     </div>
+    <div class="empty-cart">
+  <span class="empty-icon">🛒</span>
+  <p>Your cart is empty</p>
 
     <script>
         function changeQuantity(button, delta) {
@@ -172,6 +175,10 @@
             document.getElementById('total').textContent = 'Ksh' + total.toLocaleString();
         }
     </script>
+
+    
+</div>
+
 </body>
 </html>
 
