--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
                 <div class="logo">
                     <i class="fas fa-car"></i>
                     <div>
-                        <h1>DriveHub <span>Motors</span></h1>
-                        <p class="tagline">Luxury Automotive Excellence Since 1995</p>
+                        <h1 style="text-align:center"> DriveHub <span>Motors</span></h1>
+                        <p style="text-align:center" class="tagline">Luxury Automotive Excellence Since 1995</p>
                     </div>
                 </div>
 
                 <!-- Navigation -->
                 <nav>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
+                    <ul class="layout"> 
+                        <li><a  href="index.html">Home</a></li>
                         <li><a href="cars.html">Cars</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="contact.html">Contact</a></li>
