--- a/about.html
+++ b/about.html
@@ -3,7 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>About Us | DriveHub Motors</title>
+
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+    <!-- EXTERNAL CSS -->
     <link rel="stylesheet" href="styles/about.css">
 </head>
 
@@ -14,6 +22,7 @@
         <div class="logo">
             <img src="assets/images/DriveHub Motors Logo.png" alt="DriveHub Motors Logo">
         </div>
+
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a class="active" href="about.html">About Us</a></li>
@@ -25,41 +34,49 @@
     <!-- HERO SECTION -->
     <header class="about-hero">
         <div class="overlay"></div>
-        <h1>Who We Are</h1>
-        <p>Driven by passion. Powered by innovation.</p>
+        <div class="hero-content">
+            <h1>Who We Are</h1>
+            <p>Driven by passion. Powered by innovation.</p>
+        </div>
     </header>
 
     <!-- ABOUT CONTENT -->
     <section class="about-section">
         <div class="container">
-            <h2>Welcome to DriveHub Motors</h2>
-            <p>
-                DriveHub Motors is a next-generation automotive marketplace built for performance, trust,
-                and innovation. We connect drivers to high-quality vehicles through a seamless and modern buying experience.
+
+            <h2 class="section-title">Welcome to DriveHub Motors</h2>
+            <p class="section-description">
+                DriveHub Motors is a next-generation automotive marketplace built for performance,
+                trust, and innovation. We connect drivers to high-quality vehicles through a seamless
+                and modern buying experience designed for the future.
             </p>
 
             <h3>Our Mission</h3>
             <p>
-                To deliver premium automotive solutions with transparency, precision, and a passion for engineering excellence.
+                To deliver premium automotive solutions with transparency, precision, and a passion
+                for engineering excellence. We aim to redefine how drivers discover, evaluate,
+                and purchase vehicles.
             </p>
 
             <h3>Why Choose Us?</h3>
-            <ul>
+            <ul class="feature-list">
                 <li>Premium selection of certified vehicles</li>
-                <li>High-quality automotive research and inspection</li>
-                <li>Professional buying experience</li>
-                <li>Complete customer support and guidance</li>
+                <li>Comprehensive research & professional inspection</li>
+                <li>Seamless, modern car-buying experience</li>
+                <li>Dedicated customer support and guidance</li>
             </ul>
 
             <h3>Our Vision</h3>
             <p>
-                To become the most trusted automotive brand globally — where innovation, luxury, and performance meet.
+                To become the most trusted automotive brand globally — where innovation, luxury,
+                and performance meet to elevate the driving experience.
             </p>
+
         </div>
     </section>
 
     <!-- FOOTER -->
-    <footer>
+    <footer class="footer">
         <p>© 2025 DriveHub Motors — All Rights Reserved.</p>
     </footer>
 
