--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div class="container1">
             <div class="header-content">
                 <div class="logo">
+                     <img src="assets/images/DriveHub Motors Logo.png" alt="DriveHub Motors Logo">
                     <i class="fas fa-car"></i>
                     <div>
                         <h1 style="text-align:center"> DriveHub <span>Motors</span></h1>
