--- a/cars.html
+++ b/cars.html
@@ -1,18 +1,22 @@
-<!-- cars.html -  ->
-<h1>Car Listings</h1>
+<!-- cars.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> DriveHub Motors | Luxury Car Listings</title>
+    <title>DriveHub Motors | Luxury Car Listings</title>
     <link rel="stylesheet" href="listing.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <style>
-        
-    </style>
+    <link rel="stylesheet" href="styles/cars.css">
 </head>
 <body>
+    <h1>Car Listings</h1>
+
+    <!-- Your content here -->
+
+</body>
+</html>
+
     <!-- Header -->
     <header>
         <div class="container">
