--- a/about.html
+++ b/about.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- META -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="About DriveHub Motors – A fictional automotive marketplace created for a software engineering portfolio project.">
 
     <title>About Us | DriveHub Motors</title>
 
-    <!-- FONTS -->
+    <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -17,7 +19,7 @@
 
 <body>
 
-    <!-- NAVIGATION -->
+    <!-- ================= NAVIGATION ================= -->
     <nav class="navbar">
         <div class="logo">
             <img src="assets/images/DriveHub Motors Logo.png" alt="DriveHub Motors Logo">
@@ -31,7 +33,7 @@
         </ul>
     </nav>
 
-    <!-- HERO SECTION -->
+    <!-- ================= HERO SECTION ================= -->
     <header class="about-hero">
         <div class="overlay"></div>
         <div class="hero-content">
@@ -40,45 +42,52 @@
         </div>
     </header>
 
-    <!-- ABOUT CONTENT -->
-    <section class="about-section">
-        <div class="container">
+    <!-- ================= ABOUT CONTENT ================= -->
+    <main>
+        <section class="about-section">
+            <div class="container">
 
-            <h2 class="section-title">Welcome to DriveHub Motors</h2>
-            <p class="section-description">
-                DriveHub Motors is a next-generation automotive marketplace built for performance,
-                trust, and innovation. We connect drivers to high-quality vehicles through a seamless
-                and modern buying experience designed for the future.
-            </p>
+                <h2 class="section-title">Welcome to DriveHub Motors</h2>
+                <p class="section-description">
+                    DriveHub Motors is a next-generation automotive marketplace designed to
+                    showcase modern web development, clean UI design, and scalable front-end
+                    architecture.
+                </p>
 
-            <h3>Our Mission</h3>
-            <p>
-                To deliver premium automotive solutions with transparency, precision, and a passion
-                for engineering excellence. We aim to redefine how drivers discover, evaluate,
-                and purchase vehicles.
-            </p>
+                <h3>Our Mission</h3>
+                <p>
+                    Our mission is to deliver premium automotive experiences through transparency,
+                    performance, and thoughtful engineering.
+                </p>
 
-            <h3>Why Choose Us?</h3>
-            <ul class="feature-list">
-                <li>Premium selection of certified vehicles</li>
-                <li>Comprehensive research & professional inspection</li>
-                <li>Seamless, modern car-buying experience</li>
-                <li>Dedicated customer support and guidance</li>
-            </ul>
+                <h3>Why Choose DriveHub?</h3>
+                <ul class="feature-list">
+                    <li>Premium selection of certified vehicles</li>
+                    <li>Modern, responsive user experience</li>
+                    <li>Clean, maintainable code structure</li>
+                    <li>Built using industry best practices</li>
+                </ul>
 
-            <h3>Our Vision</h3>
-            <p>
-                To become the most trusted automotive brand globally — where innovation, luxury,
-                and performance meet to elevate the driving experience.
-            </p>
+                <h3>Our Vision</h3>
+                <p>
+                    To demonstrate how software engineering and thoughtful design can create
+                    professional-grade web applications.
+                </p>
 
-        </div>
-    </section>
+            </div>
+        </section>
+    </main>
 
-    <!-- FOOTER -->
-    <footer class="footer">
-        <p>© 2025 DriveHub Motors — All Rights Reserved.</p>
+    <!-- ================= FOOTER ================= -->
+    <footer class="footer" role="contentinfo">
+        <p>
+            © 2025 DriveHub Motors. This website is a fictional project created for
+            educational and software engineering portfolio purposes only.
+        </p>
     </footer>
 
+    <!-- ================= JAVASCRIPT ================= -->
+    <script src="scripts/about.js"></script>
 </body>
 </html>
+
