Abdirahman has updated the css file adn html file which he is working with Isiah

--- a/about.html
+++ b/about.html
@@ -19,10 +19,10 @@
 
 <body>
 
-    <!-- ================= NAVIGATION ================= -->
+    <!-- ================= NAVBAR ================= -->
     <nav class="navbar">
         <div class="logo">
-            <img src="assets/images/DriveHub Motors Logo.png" alt="DriveHub Motors Logo">
+            <img src="assets/images/Logo.png" alt="DriveHub Motors Logo" class="logo-img">
         </div>
 
         <ul class="nav-links">
@@ -37,8 +37,8 @@
     <header class="about-hero">
         <div class="overlay"></div>
         <div class="hero-content">
-            <h1>Who We Are</h1>
-            <p>Driven by passion. Powered by innovation.</p>
+            <h1>Engineering Trust in Motion</h1>
+            <p>Luxury automotive experiences, built with precision.</p>
         </div>
     </header>
 
@@ -49,15 +49,18 @@
 
                 <h2 class="section-title">Welcome to DriveHub Motors</h2>
                 <p class="section-description">
-                    DriveHub Motors is a next-generation automotive marketplace designed to
-                    showcase modern web development, clean UI design, and scalable front-end
-                    architecture.
+                    DriveHub Motors is a fictional car-selling website created by <strong class="team-name">"NewWave Devs"</strong>
+as a portfolio project. This mock platform showcases our skills in web development, 
+UI/UX design, and front-end engineering, highlighting our ability to build professional, 
+responsive, and visually appealing web applications.
                 </p>
 
                 <h3>Our Mission</h3>
                 <p>
-                    Our mission is to deliver premium automotive experiences through transparency,
-                    performance, and thoughtful engineering.
+                    Our mission is to showcase the skills and creativity of <strong class="team-name">"NewWave Devs"</strong> 
+by building a functional, visually appealing, and responsive car-selling website. 
+Through this project, we aim to demonstrate our ability to collaborate, implement 
+modern web development practices, and deliver polished portfolio-ready applications.
                 </p>
 
                 <h3>Why Choose DriveHub?</h3>
@@ -70,8 +73,10 @@
 
                 <h3>Our Vision</h3>
                 <p>
-                    To demonstrate how software engineering and thoughtful design can create
-                    professional-grade web applications.
+                   Our vision is to demonstrate how <strong class="team-name">"NewWave Devs"</strong>, as software engineers, 
+can design and build a functional, user-friendly car-selling website. This project 
+showcases our potential to create scalable, visually appealing web applications 
+and highlights the skills we bring to future professional projects.
                 </p>
 
             </div>
@@ -81,13 +86,12 @@
     <!-- ================= FOOTER ================= -->
     <footer class="footer" role="contentinfo">
         <p>
-            © 2025 DriveHub Motors. This website is a fictional project created for
-            educational and software engineering portfolio purposes only.
+           © 2025 DriveHub Motors. This website is a fictional car-selling platform 
+        created by <strong class="team-name">"NEWWAVE Devs"</strong> as a portfolio project to showcase 
+        our web development and design skills.
         </p>
     </footer>
 
-    <!-- ================= JAVASCRIPT ================= -->
-    <script src="scripts/about.js"></script>
 </body>
 </html>
 
