--- a/index.html
+++ b/index.html
@@ -106,7 +106,33 @@
                     <p>A legendary sports car known for its precision, heritage, and thrilling drive.</p>
                     <a href="car-details.html?id=5" class="btn-details">View Details</a>
                 </div>
+                
+                <!--car 6-->
+                <div class="car-card">
+                    <img src ="https://i.pinimg.com/1200x/dc/23/91/dc23913e4c72130077cd47e949a98a0c.jpg" alt="range rove concept">
+                    <h3>range rover concept 2017</h3>
+                     <p>$145,000 • Sports • Automatic</p>
+                     <p>The 2017 Velar is known for redefining modern luxury SUVs by going full digital before anyone else dared.</p>
+                     <a href="car-details.html?id=6" class="btn-details">View Details</a>
+                </div>
 
+                <!--car 7-->
+                <div class="car-card">
+                    <img src ="https://i.pinimg.com/736x/af/40/08/af4008b714477e737c9f35d613e7ac17.jpg " alt="dodge challenger">
+                    <h3>dodge challenger 2023</h3>
+                     <p>$85,000 • Sports • Automatic</p>
+                     <p>The Challenger is known for unapologetic power — it doesn’t try to be subtle, efficient, or polite. It’s loud, heavy, fast, and proud of it.</p>
+                     <a href="car-details.html?id=7" class="btn-details">View Details</a>
+                </div>
+
+                <!--car 8-->
+                <div class="car-card">
+                    <img src ="https://i.pinimg.com/1200x/ed/ca/b2/edcab216f5e523fa48faf80cbe5b45f9.jpg" alt="mazda 6">
+                    <h3>mazda 6 2024</h3>
+                     <p>$45,000 • Sports • Automatic</p>
+                     <p>it’s a sports car in disguise. With Skyactiv tech, it squeezes insane power and fuel efficiency out of a 2.5L engine, corners like a track car.</p>
+                     <a href="car-details.html?id=8" class="btn-details">View Details</a>
+                </div>
             </div>
         </div>
     </section>
