--- a/cars.html
+++ b/cars.html
@@ -197,7 +197,7 @@
                 },
                 {
                     id: 2,
-                    title: "BMW X7",
+                    title: "Amg gt coupe",
                     price: "$98,500",
                     year: 2023,
                     image: "https://images.unsplash.com/photo-1553440569-bcc63803a83d?auto=format&fit=crop&w=800&q=80",
@@ -211,7 +211,7 @@
                     title: "Audi RS7",
                     price: "$145,000",
                     year: 2021,
-                    image: "https://images.unsplash.com/photo-1605559424843-9e4c228bf1c2?auto=format&fit=crop&w=800&q=80",
+                    image: "https://i.pinimg.com/1200x/ed/0f/12/ed0f12452681a4f70af5f1699de17574.jpg",
                     badge: "Sport",
                     fuel: "Gasoline",
                     mileage: "18,300 mi",
@@ -233,7 +233,7 @@
                     title: "Lexus LX 600",
                     price: "$112,000",
                     year: 2022,
-                    image: "https://images.unsplash.com/photo-1549399542-7e3f8b79c341?auto=format&fit=crop&w=800&q=80",
+                    image: "https://i.pinimg.com/1200x/b4/12/8f/b4128f24266974531b185c5c52fcfd81.jpg",
                     badge: "Luxury",
                     fuel: "Hybrid",
                     mileage: "15,000 mi",
@@ -244,7 +244,7 @@
                     title: "Jaguar F-Type",
                     price: "$92,500",
                     year: 2021,
-                    image: "https://images.unsplash.com/photo-1603584173870-7f23fdae1b7a?auto=format&fit=crop&w=800&q=80",
+                    image: "https://i.pinimg.com/1200x/e3/1a/cb/e31acbd0d5e8828ef045faf20dbc857b.jpg",
                     badge: "Convertible",
                     fuel: "Gasoline",
                     mileage: "22,100 mi",
