--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 
 <body>
    <img
-     src="https://i.pinimg.com/1200x/44/27/3e/44273e58ffcd76b9d30c0e972bc05a34.jpg"
+     src=""
     alt="car"
     class="car-image"
     />
@@ -37,7 +37,7 @@
   <!--      CONTACT BANNER    -->
   <!-- ======================= -->
   <section class="contact-banner">
-    <img src="https://images.vexels.com/media/users/3/154661/isolated/preview/7288653d1853bbc9f5e2a844ffadb763-luxury-car-side-view-silhouette.png" alt="DriveHub Motors Contact Banner">
+    <img src="https://i.pinimg.com/1200x/44/27/3e/44273e58ffcd76b9d30c0e972bc05a34.jpg" alt="DriveHub Motors Contact Banner">
   </section>
 
   <!-- ======================= -->
